[package]
name = "masked"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r_hafiyatulin@wargaming.net>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/RGafiyatullin/serde-rs"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1", features = ["derive"]}

[dev-dependencies]
serde_json = "^1"