[package]
name = "masked"
version = "0.1.3"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/RGafiyatullin/serde-rs"
description = "A wrapper over a value containing sensitive information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1", features = ["derive"]}

[dev-dependencies]
serde_json = "^1"